# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ni_usb_6501"
version = "0.1.2"
description = "Linux driver for National Instruments USB-6501"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyusb>=1.2.0"]

[tool.setuptools]
py-modules = ["ni_usb_6501"]
